--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>ようこそ！</h1>
   <p>物理シミュレーターを開くには、下のリンクをクリックしてください：</p>
-
+  <a href="about.html">Aboutページへ</a>
   <a href="simulator.html">▶ シミュレーターを起動する</a>
 </body>
 </html>
