--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <title>トップページ</title>
 </head>
 <body>
-  <h1>ようこそ！</h1>
-  <p>物理シミュレーターを開くには、下のリンクをクリックしてください：</p>
-  <a href="about.html">Aboutページへ</a>
-  
-  <a href="simulator.html">▶ シミュレーターを起動する</a>
+  <h1>物理シミュレーションのページへようこそ！</h1>
+  <p>こちらから他のページへ移動できます：</p>
+  <ul>
+    <li><a href="about.html">Aboutページへ</a></li>
+    <li><a href="simulator.html">シミュレーターへ</a></li>
+  </ul>
 </body>
 </html>
 
