--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>トップページ</title>
+  <title>物理基礎授業トップページ</title>
 </head>
 <body>
-  <h1>物理シミュレーションのページへようこそ！</h1>
-  <p>こちらから他のページへ移動できます：</p>
+  <h1>物理基礎シミュレーション</h1>
+  <p>授業で扱うシミュレーターはこちらから：</p>
   <ul>
-    <li><a href="about.html">Aboutページへ</a></li>
-    <li><a href="simulator.html">シミュレーターへ</a></li>
+    <li><a href="about.html">正弦波</a></li>
+    <br>
+    <li><a href="compressional_wave.html">疎密波</a></li>
+    <br>
+    <li><a href="simulator.html">重ね合わせ</a></li>
+    <br>
+    <li><a href="standing_wave.html">定在波</a></li>
+    <br>
+    <li><a href="reflection.html">自由端・固定端</a></li>
   </ul>
 </body>
 </html>
