--- a/reflection.html
+++ b/reflection.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>重ね合わせ</title>
+  <title>自由端・固定端</title>
   <style>
     body { font-family: sans-serif; padding: 20px; }
     canvas { border: 1px solid #ccc; display: block; margin-top: 10px; }
   </style>
 </head>
 <body>
-  <h1>重ね合わせシミュレーター</h1>
+  <h1>自由端・固定端反射シミュレーター</h1>
 
   <label>質量 (kg): <input type="number" id="massInput" value="1" step="0.1"></label><br>
   <label>初速度 (m/s): <input type="number" id="velocityInput" value="10" step="1"></label><br>
@@ -17,7 +17,7 @@
 
   <canvas id="simCanvas" width="600" height="300"></canvas>
 
-  <script src="simulator.js"></script>
+  <script src="reflect.js"></script>
 <a href="index.html">ホームに戻る</a>
 </body>
 </html>
