--- a/about.html
+++ b/about.html
@@ -1,23 +1,44 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>正弦波</title>
+  <meta charset="UTF-8">
+  <title>正弦波シミュレーター</title>
   <style>
-    body { font-family: sans-serif; padding: 20px; }
-    canvas { border: 1px solid #ccc; display: block; margin-top: 10px; }
+    canvas {
+      border: 1px solid #ccc;
+      background: #f9f9f9;
+      display: block;
+      margin-bottom: 10px;
+    }
+    .controls {
+      font-family: sans-serif;
+      margin-bottom: 10px;
+    }
+    label {
+      display: inline-block;
+      width: 80px;
+    }
   </style>
 </head>
 <body>
-  <h1>正弦波シミュレーター</h1>
+  <h2>正弦波シミュレーター</h2>
+  <canvas id="waveCanvas" width="800" height="300"></canvas>
 
-  <label>質量 (kg): <input type="number" id="massInput" value="1" step="0.1"></label><br>
-  <label>初速度 (m/s): <input type="number" id="velocityInput" value="10" step="1"></label><br>
-  <button onclick="startSimulation()">シミュレーション開始</button>
+  <div class="controls">
+    <label>周波数:</label>
+    <input type="range" id="frequency" min="0.1" max="1" step="0.1" value="0.5">
+    <span id="freqVal">1</span> Hz
+    <br>
+    <label>振幅:</label>
+    <input type="range" id="amplitude" min="10" max="100" step="1" value="50">
+    <span id="ampVal">50</span>
+    <br>
+    <button id="resetBtn">リセット</button>
+  </div>
 
-  <canvas id="simCanvas" width="600" height="300"></canvas>
-
+  <p>※ クリックした点から波が広がります</p>
   <script src="sin.js"></script>
-<a href="index.html">ホームに戻る</a>
+  <a href="index.html">ホームに戻る</a>
 </body>
 </html>
+
