--- a/simulator.html
+++ b/simulator.html
@@ -1,23 +1,100 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>重ね合わせ</title>
   <style>
-    body { font-family: sans-serif; padding: 20px; }
-    canvas { border: 1px solid #ccc; display: block; margin-top: 10px; }
+    body {
+      font-family: sans-serif;
+      background: #f0f0f0;
+      text-align: center;
+    }
+    canvas {
+      background: #fff;
+      border: 1px solid #ccc;
+      margin: 10px 0;
+    }
+    .slider-group {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1em;
+    }
+    .slider-block {
+      background: #fff;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    label {
+      display: block;
+      font-size: 0.9em;
+    }
+    span {
+      margin-left: 10px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <h1>重ね合わせシミュレーター</h1>
 
-  <label>質量 (kg): <input type="number" id="massInput" value="1" step="0.1"></label><br>
-  <label>初速度 (m/s): <input type="number" id="velocityInput" value="10" step="1"></label><br>
-  <button onclick="startSimulation()">シミュレーション開始</button>
+  <h2>重ね合わせの原理シミュレーター</h2>
+  <canvas id="waveCanvas" width="800" height="200"></canvas>
 
-  <canvas id="simCanvas" width="600" height="300"></canvas>
+  <div class="slider-group">
+    <div class="slider-block">
+      <label>波源1 振幅 
+        <input type="range" id="amp1" min="0" max="50" value="20" oninput="updateValue(this)">
+        <span id="amp1_val">20</span>
+      </label>
+      <label>周波数 
+        <input type="range" id="freq1" min="0.1" max="3" step="0.1" value="1.5" oninput="updateValue(this)">
+        <span id="freq1_val">1.5</span>
+      </label>
+      <label>速度 
+        <input type="range" id="speed1" min="0.1" max="5" step="0.1" value="1" oninput="updateValue(this)">
+        <span id="speed1_val">1</span>
+      </label>
+      <label>位相差 
+        <input type="range" id="phase1" min="0" max="6.0" step="0.1" value="0" oninput="updateValue(this)">
+        <span id="phase1_val">0</span>
+      </label>
+      <label>進行方向
+        <select id="dir1">
+          <option value="right" selected>→ 右</option>
+          <option value="left">← 左</option>
+        </select>
+      </label>
+    </div>
+
+    <div class="slider-block">
+      <label>波源2 振幅 
+        <input type="range" id="amp2" min="0" max="50" value="20" oninput="updateValue(this)">
+        <span id="amp2_val">20</span>
+      </label>
+      <label>周波数 
+        <input type="range" id="freq2" min="0.1" max="3" step="0.1" value="1.5" oninput="updateValue(this)">
+        <span id="freq2_val">1.5</span>
+      </label>
+      <label>速度 
+        <input type="range" id="speed2" min="0.1" max="5" step="0.1" value="1" oninput="updateValue(this)">
+        <span id="speed2_val">1</span>
+      </label>
+      <label>位相差 
+        <input type="range" id="phase2" min="0" max="6.0" step="0.1" value="0" oninput="updateValue(this)">
+        <span id="phase2_val">0</span>
+      </label>
+      <label>進行方向
+        <select id="dir2">
+          <option value="right">→ 右</option>
+          <option value="left" selected>← 左</option>
+        </select>
+      </label>
+    </div>
+  </div>
 
   <script src="simulator.js"></script>
+  <br>
 <a href="index.html">ホームに戻る</a>
 </body>
 </html>
