--- a/compressional_wave.html
+++ b/compressional_wave.html
@@ -16,9 +16,8 @@
   <!-- 密度グラフ -->
   <canvas id="densityCanvas" width="800" height="150"></canvas>
   <label for="speedSlider">波の速さ:</label>
-  <input type="range" id="speedSlider" min="1" max="3"step="0.1" value="2
-  ">
-  <span id="speedValue">3</span>
+  <input type="range" id="speedSlider" min="1" max="3"step="0.1" value="2"oninput="updateValue(this)">
+  <span id="speedValue">2.0</span>
   <br>
   <br>
   <script src="com_wave.js"></script>
