--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>正弦波シミュレーター</title>
+  <title>波の発生シミュレーター</title>
   <style>
     canvas {
       border: 1px solid #ccc;
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <h2>正弦波シミュレーター</h2>
+  <h2>波の発生シミュレーター</h2>
   <canvas id="waveCanvas" width="800" height="300"></canvas>
 
   <div class="controls">
