--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <h1>物理基礎シミュレーション</h1>
   <p>授業で扱うシミュレーターはこちらから：</p>
   <ul>
-    <li><a href="about.html">正弦波</a></li>
+    <li><a href="about.html">波の発生</a></li>
+    <br>
+    <li><a href="sin_wave+alfa.html">正弦波</a></li>
     <br>
     <li><a href="compressional_wave.html">疎密波</a></li>
     <br>
