--- a/simulator.html
+++ b/simulator.html
@@ -51,7 +51,7 @@
         <input type="range" id="wavelength1" min="50" max="100" step="10" value="60" oninput="updateValue(this)">
         <span id="wavelength1_val">60</span>
       </label>
-      <label>速度 
+      <label>速さ
         <input type="range" id="speed1" min="10" max="15" step="1" value="15" oninput="updateValue(this)">
         <span id="speed1_val">15</span>
       </label>
@@ -76,7 +76,7 @@
         <input type="range" id="wavelength2" min="50" max="100" step="10" value="50" oninput="updateValue(this)">
         <span id="wavelength2_val">50</span>
       </label>
-      <label>速度 
+      <label>速さ 
         <input type="range" id="speed2" min="10" max="15" step="1" value="10" oninput="updateValue(this)">
         <span id="speed2_val">10</span>
       </label>
